fix-carousel-gap

--- a/src/style/_carousel.scss
+++ b/src/style/_carousel.scss
@@ -1,10 +1,11 @@
 ._carousel {
   @apply w-full h-full overflow-hidden;
   .carousel-container {
-    @apply flex flex-nowrap min-w-full w-fit bg-purple-500 h-full;
+    @apply flex flex-nowrap min-w-full w-fit bg-purple-500 h-full gap-5;
   }
   .carousel-item {
-    @apply w-full h-full flex-shrink-0;
+    //@apply w-full h-full flex-shrink-0;
+    @apply w-2/3 h-full flex-shrink-0;
     img {
       @apply w-full h-full object-cover
     }
